google changed to 100% again, spacing of serve legal fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ ul {
   background-color: #E71D36;
 }
 
-#willingnessJS {
+#googlinessJS {
   background-color: #5ccf69;
 }
 
